--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         data-a-each=".05" data-obs-once="true" data-a-delay=".05" data-a-ease="slow.out"
                         data-obs-m="20px">
                         <span class="bounce">
-                            <em>p</em>
+                            p
                         </span>
                         <span class="bounce">e</span>
                         <span class="bounce">n</span>
@@ -57,18 +57,18 @@
                         data-a-each=".05" data-obs-once="true" data-a-delay=".05" data-a-ease="slow.out"
                         data-obs-m="20px">
                         <span class="bounce">
-                            <em>m</em>
+                            m
                         </span>
                         <span class="bounce">o</span>
                         <span class="bounce">r</span>
                         <span class="bounce">
-                            <em>o</em>
+                            o
                         </span>
                     </h1>
                 </div>
                 <div class="heading-text-middle">
     
-                    <div class="hero-pill heading-text">prensa</div>
+                    <div class="hero-pill heading-text">periodismo</div>
 
                 </div>
                 <div class="heading-text-middle">
@@ -119,7 +119,7 @@
         
                 <div class="w-layout-grid grid-text top1em">
                     <div class="div-block-25">
-
+                        <img src="./assets/foto.jpeg" alt="" srcset="">
 
                     </div>
 
@@ -252,18 +252,18 @@
                                     <div class="accordion-item-trigger">
                                         <h3 class="h3" data-a-duration="0.6" data-obs-t="0" data-a-split="char"
                                             data-a-each=".05" data-obs-once="true" data-a-delay=".05"
-                                            data-a-ease="slow.out" data-obs-m="10px">seminarios y diplomaturas</h3>
+                                            data-a-ease="slow.out" data-obs-m="10px">talleres, seminarios y diplomaturas</h3>
                                         <img src="assets/arrow.svg" loading="lazy" width="16" alt=""
                                             class="down-arrow" />
                                     </div>
                                     <div class="accordion-item-content">
-                                        <p>
-                                            Actualización de Herramientas Periodísticas </p>
+                                        <p>Actualización de Herramientas Periodísticas </p>
                                         <p> Oratoria y Comunicación Efectiva</p>
                                         <p>Gestión Cultural</p>
                                         <p>Guión y producción de Podcast</p>
                                         <p>Redes Sociales y Social Media</p>
-                                        <p>Perspectiva en derechos humanos, género, diversidad y disidencias.</p>
+                                        <p>Perspectiva en derechos humanos, género, diversidad y disidencias</p>
+                                        <p>Temáticas centrales de ISF-Ar (Derechos humanos, desarrollo sostenible, perspectiva de género, sustentabilidad)</p>
 
                                     </div>
                                 </div>
