--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link href="styles/styles.css" rel="stylesheet" type="text/css" />
     <style>
 
-    </style><!-- 
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" /> -->
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script href="scripts/script.js" type="text/javascript">
     </script>
@@ -68,7 +66,7 @@
                 </div>
                 <div class="heading-text-middle">
 
-                    <div class="hero-pill heading-text">periodismo</div>
+                    <div class="hero-pill heading-text">prensa y periodismo</div>
 
                 </div>
                 <div class="heading-text-middle">
