--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>penelope moro | prensa | portfolio</title>
+    <title>penelope moro | prensa | periodismo | portfolio</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="styles/styles.css" rel="stylesheet" type="text/css" />
     <style>
@@ -116,11 +116,11 @@
                 </div>
 
                 <div class="w-layout-grid grid-text top1em">
-                    <div class="div-block-25">
+                    
+                    <div style="text-align: center;">
                         <img clas="foto" src="./assets/foto.jpeg" alt="" srcset="">
-
+    
                     </div>
-
 
 
 
